# click-repl

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Changelog.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  formatter.yml  release.yml  tests.yml
click_repl/: __init__.py  _completer.py  _ctx_stack.py  _repl.py  core.py  exceptions.py  globals_.py  utils.py
requirements/: requirements.txt  requirements_dev.txt
src/click_repl/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_argument.py  test_basic.py  test_command_collection.py  test_complete.py  test_dev.py  test_option.py  test_repl.py  test_repl_ctx.py
tests/test_completion/: test_path_type.py
tests/test_completion/test_click_version_ge_8/: test_arg_completion_v8.py  test_option_completion_v8.py
tests/test_completion/test_click_version_le_7/: test_arg_completion_v7.py  test_option_completion_v7.py
tests/test_completion/test_common_tests/: test_arg_completion.py  test_cmd_completion.py  test_hidden_cmd_and_args.py  test_option_completion.py
tests/test_completion/test_path_type/: test_path_type.py
tests/test_dev/: test_get_internal_cmds.py  test_internal_cmds.py  test_register_internal_cmds.py  test_sys_cmds.py
tests/test_repl/: test_repl.py
