[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "click-repl"
description = "REPL plugin for Click"
readme = "README.md"
authors = [
    { name = "Markus Unterwaditzer", email = "markus@unterwaditzer.net" },
]
license = { text = "MIT" }
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "click>=7.0",
    "prompt_toolkit>=3.0.36",
    "typing-extensions>=4.7.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "tox>=4.4.3",
]

[project.urls]
Homepage = "https://github.com/click-contrib/click-repl"
Repository = "https://github.com/click-contrib/click-repl"

[tool.setuptools]
packages = ["click_repl"]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "click_repl.__version__" }

[tool.pytest.ini_options]
addopts = [
    "--cov=click_repl"
]

testpaths = [
    "tests",
]
