[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "click-repl"
description = "REPL plugin for Click"
readme = "README.md"
authors = [
    { name = "Markus Unterwaditzer", email = "markus@unterwaditzer.net" },
]
license = { text = "MIT" }
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "click>=7.0",
    "prompt_toolkit>=3.0.36",
    "typing-extensions>=4.7.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "tox>=4.4.3",
]

[project.urls]
Homepage = "https://github.com/click-contrib/click-repl"
Repository = "https://github.com/click-contrib/click-repl"

[tool.setuptools]
packages = ["click_repl"]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "click_repl.__version__" }

[tool.pytest.ini_options]
addopts = [
    "--cov=click_repl"
]

testpaths = [
    "tests",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "W", # pycodestyle-warnings
    "E", # pycodestyle-errors
#    "I", # isort
#    "N", # pep8-naming
#    "D", # pydocstyle
#    "UP", # pyupgrade
#    "YTT", # flake8-2020
#    "ANN", # flake8-annotations
#    "S", # flake8-banditF
#    "FBT", # flake8-boolean-trap
#    "B", # flake8-bugbear
#    "A", # flake8-builtins
#    "COM", # flake8-comma
#    "C4", # flake8-comprehensions
#    "EM", # flake8-errmsg
#    "FA", # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
#    "G", # flake8-logging-format
    "PIE", # flake8-pie
#    "T20", # flake8-print
#    "PYI", # flake8-pyi
#    "PT", # flake8-pytest-style
#    "Q", # flake8-quotes
#    "RSE", # flake8-raise
#    "RET", # flake8-return
#    "SLF", # flake8-self
#    "SIM", # flake8-simplify
#    "TID", # flake8-tidy-imports
#    "TCH", # flake8-type-checking
#    "ARG", # flake8-unused-arguments
#    "PTH", # flake8-use-pathlib
#    "TD", # flake8-todos
#    "ERA", # eradicate
#    "PGH", # pygrep-hooks
#    "PL", # pylint
#    "TRY", # tryceratops
#    "FLY", # flynt
#    "PERF", # perflint
#    "FURB", # refurb
#    "RUF", # Ruff-specific
]
ignore = [
    "E203", "E266", "E402", "E731", "C901",
]

[tool.ruff.lint.mccabe]
max-complexity = 18
