[metadata]
name = click-repl
version = attr: click_repl.__version__
description = REPL plugin for Click

url = https://github.com/untitaker/click-repl

author = Markus Unterwaditzer
author_email = markus@unterwaditzer.net
license = MIT

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages=
  click_repl

package_dir=
  =src

install_requires =
  click>=7.0
  prompt_toolkit>=3.0.36

python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
  pytest>=7.2.1
  pytest-cov>=4.0.0
  ; mypy>=0.991
  tox>=4.4.3

; [options.package_data]
; click_repl = py.typed

[flake8]
ignore = E203, E266, W503, E402, E731
max-line-length = 90
max-complexity = 18
select = B,C,E,F,W,T4,B9
