[metadata]
name = click-repl
version = attr: click_repl.__version__
description = REPL plugin for Click
description-file = README.md
long_description_content_type = text/markdown
long_description = file: README.md

url = https://github.com/click-contrib/click-repl

author = Markus Unterwaditzer
author_email = markus@unterwaditzer.net
license = MIT

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages=
  click_repl

install_requires =
  click>=7.0
  prompt_toolkit>=3.0.36
  typing-extensions>=4.7.0

python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
  pytest>=7.2.1
  pytest-cov>=4.0.0
  tox>=4.4.3

[flake8]
ignore = E203, E266, W503, E402, E731, C901
max-line-length = 90
max-complexity = 18
select = B,C,E,F,W,T4,B9
